# django-tutorial

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  setup.cfg
mysite/mysite/: settings.py
mysite/polls/: models.py  views.py
mysite/polls/migrations/: 0001_initial.py
